# VR_NetworkTables2024

./: .gitignore  AprilTag_samples.txt  AprilTag_samples_13Feb.txt  AprilTag_samples_blue.txt  AprilTag_samples_red.txt  Camera Covariance.ipynb  Coordinate Transformations.ipynb  Coordinate Transformations_backup.ipynb  README.md  Run RobotPy sim.bat  april_tag_coordindates.py  camera_covariance_combined_raw.csv  camera_covariance_trackers.csv  circle_samples.txt  circle_samples_1.txt  circle_samples_2.txt  circle_samples_3.txt  circle_samples_4.txt  circle_samples_5.txt  client.py  config.json  coordinate transformation test.py  fieldCalibrateDebug.ipynb  pyproject.toml  robot.py  simgui-window.json  simgui.json  steamvr.vrsettings  steamvr.vrstats  tracker_coordinate_transform.py  tracker_sample.py  tracker_test.py  trackercal.py  trackers.py  transform.txt  transform_13Feb.txt  triad_openvr.py  udp_emitter.py  udp_receiver.cs  vr_trackers_table.py
lighthouse/: lighthousedb.json  lighthousedb.json.tmp
lighthouse/lhr-732aa606/: config.json
lighthouse/lhr-a688cb30/: config.json
lighthouse/lhr-f9fbebdd/: config.json
vrappconfig/: openvr.tool.steamvr_room_setup.vrappconfig
