[project]
name = "vr-networktables2024"
version = "1.0.0"
description = "Integration of virtual reality hardware and robot network tables to provide localization ground truth"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "appdirs>=1.4.4",
    "circle-fit>=0.2.1",
    "colorama>=0.4.6",
    "icecream>=2.1.10",
    "matplotlib>=3.10.8",
    "openvr>=2.12.1401",
    "pyopenxr>=1.1.5301",
    "robotpy>=2026.2.1",
]

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2024.3.2.2"

# Which extra RobotPy components should be installed
# -> equivalent to `pip install robotpy[extra1, ...]
robotpy_extras = [
    # "all",
    # "apriltag",
    # "commands2",
    # "cscore",
    # "navx",
    # "pathplannerlib",
    # "phoenix5",
    # "phoenix6",
    # "photonvision",
    # "playingwithfusion",
    # "rev",
    # "romi",
    # "sim",
    # "xrp",
]

# Other pip packages to install
requires = []
